# Kraken-ws

./: CMakeLists.txt  LICENSE  README.md
data/: data_BTC-USD.csv  data_BTC-USD.json  data_NANO-USD.csv  data_NANO-USD.json
include/: Logger.h
src/: Logger.cpp  main.cpp
